ns-system/db/adminer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer

spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      enableServiceLinks: false
      containers:
        - name: adminer
          image: adminer:6.1.1
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: "10m"
              memory: "10Mi"
            limits:
              cpu: "100m"
              memory: "50Mi"
