ns-system/db/mariadb-stateful-set.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: mariadb

spec:
  serviceName: mariadb
  replicas: 1
  podManagementPolicy: Parallel
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      enableServiceLinks: false
      nodeSelector:
        kubernetes.io/hostname: csc301.tokyotech.org

      volumes:
        - name: data
          hostPath:
            path: /srv/ns/mariadb/data
        - name: config
          configMap:
            name: mariadb-config

      containers:
        - name: mariadb
          image: mariadb:13.0.2
          ports:
            - containerPort: 3306
              name: mariadb
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: data
            - mountPath: /etc/mysql/mariadb.conf.d/90-tuning.cnf
              name: config
              subPath: 90-tuning.cnf
            - mountPath: /etc/mysql/mariadb.conf.d/80-slow-query.cnf
              name: config
              subPath: 80-slow-query.cnf
          resources:
            requests:
              cpu: "10m"
              memory: "250Mi"
            limits:
              cpu: "1"
              memory: "500Mi"
