ns-system/db/mongo-stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo

spec:
  serviceName: mongo
  replicas: 1
  podManagementPolicy: Parallel
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      enableServiceLinks: false
      nodeSelector:
        kubernetes.io/hostname: csc301.tokyotech.org

      volumes:
        - name: data
          hostPath:
            path: /srv/ns/mongo/data

      containers:
        - name: mongo
          image: mongo:7.0.40
          args:
            - "mongod"
            - "--auth"
            - "--bind_ip_all"
            - "--maxConns=300"
          ports:
            - name: mongo
              containerPort: 27017
          volumeMounts:
            - name: data
              mountPath: /data/db
          resources:
            requests:
              cpu: "10m"
              memory: "160Mi"
            limits:
              cpu: "1"
              memory: "300Mi"
