ns-system/db/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb

spec:
  type: ClusterIP
  ports:
    - targetPort: mariadb
      name: mariadb
      port: 3306
  selector:
    app: mariadb
