ns-system/db/adminer-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adminer

spec:
  entryPoints:
    - web
    - websecure
  tls:
    secretName: adminer-tls
  routes:
    - kind: Rule
      match: Host(`adminer.ns.trap.jp`)
      middlewares:
        - name: https-redirect
          namespace: traefik
        - name: auth-trap-jp-hard
          namespace: auth
      services:
        - namespace: ns-system
          kind: Service
          name: adminer
          port: 80
          scheme: http
          strategy: RoundRobin
          weight: 1
